--- a/css/style.scss
+++ b/css/style.scss
@@ -1697,7 +1697,7 @@ footer {
   flex-direction: column;
 }
 .contact_section {
-  padding: 40px;
+  padding: 40px 0;
   form {
     background: #fff;
     box-shadow: 0px 4px 24px #0000001a;
@@ -2047,7 +2047,7 @@ footer {
   }
 }
 .profile {
-  padding: 40px;
+  padding: 40px 0;
   .userHeader {
     margin-bottom: 32px;
     background-color: var(--whiteColor);
@@ -2117,18 +2117,25 @@ footer {
     a {
       padding: 12px 16px;
       display: flex;
+      gap: 8px;
       align-items: center;
       transition: var(--transition);
       border-radius: 12px;
       border: 1px solid #eee;
       text-transform: capitalize;
-      i {
-        margin-right: 5px;
+      img{
+        width: 20px;
+        height: 20px; 
+        object-fit: contain;
+        transition: var(--transition);
       }
       &.active,
       &:hover {
         background-color: var(--mainColor);
         color: var(--whiteColor);
+        img{
+          filter: brightness(0) invert(1);
+        }
       }
     }
     @media (max-width: 760px) {
