--- a/css/style.scss
+++ b/css/style.scss
@@ -903,6 +903,7 @@ footer {
     }
   }
 }
+
 .item {
   position: relative;
   display: flex;
@@ -1020,7 +1021,7 @@ footer {
         height: 16px;
       }
     }
-    .promoted{
+    .promoted {
       color: var(--mainColor);
       text-transform: capitalize;
     }
@@ -1056,6 +1057,71 @@ footer {
           font-size: 20px;
         }
       }
+    }
+  }
+  .dropdown {
+    position: absolute;
+    top: 8px;
+    left: 8px;
+    z-index: 3;
+
+    button {
+      height: 32px;
+      width: 32px;
+      border-radius: 100px;
+      background-color: var(--whiteColor);
+      padding: 4px;
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      img {
+        width: 16px;
+        height: 16px;
+        object-fit: contain;
+      }
+      &::after {
+        display: none;
+      }
+    }
+    .dropdown-menu {
+      inset: unset !important;
+      transform: unset !important;
+      left: 0 !important;
+      top: calc(100% + 4px) !important;
+      border: none;
+      border-radius: 16px;
+      overflow: hidden;
+      --bs-dropdown-min-width: 7rem;
+      .dropdown-item {
+        padding: 6px 12px;
+        text-transform: capitalize;
+        display: flex;
+        align-items: center;
+        gap: 8px;
+        img {
+          width: 16px;
+          height: 16px;
+          object-fit: contain;
+        }
+      }
+    }
+  }
+  .status {
+    color: var(--darkColor);
+    width: fit-content;
+    padding: 4px 12px;
+    border-radius: 100px;
+    &.avilable {
+      background-color: var(--mainColor10);
+      color: var(--mainColor);
+    }
+    &.promoted {
+      background-color: var(--mainColor);
+      color: var(--whiteColor);
+    }
+    &.sold {
+      background-color: var(--darkColor);
+      color: var(--whiteColor);
     }
   }
   &:hover {
@@ -2041,6 +2107,7 @@ footer {
     left: 12px;
     background-color: var(--whiteColor);
     border-radius: 100%;
+    pointer-events: none;
     img {
       width: 32px;
       height: 32px;
@@ -2050,62 +2117,57 @@ footer {
   #profileImageInput {
     display: none;
   }
+  &.wide {
+    margin: unset;
+    .profileImageLabel {
+      cursor: pointer;
+      img {
+        width: 100%;
+        border-radius: 12px;
+        aspect-ratio: 3/2;
+        max-height: 300px;
+        object-fit: contain;
+      }
+    }
+    span {
+      bottom: -4px;
+      left: -4px;
+    }
+  }
 }
 .profile {
   padding: 40px 0;
-  .userHeader {
+
+  .userInfo {
     margin-bottom: 32px;
     background-color: var(--whiteColor);
     border-radius: 20px;
     box-shadow: var(--BigShadow);
     padding: 20px;
-    @media (max-width: 768px) {
-      padding: 10px;
+    position: relative;
+    display: flex;
+    flex-wrap: wrap;
+    align-items: center;
+    gap: 16px;
+    .userImg {
+      width: 80px;
+      height: 80px;
+      object-fit: cover;
+      border-radius: 100%;
+      border: 1px solid var(--mainColor);
     }
-    .userInfo {
-      position: relative;
-      display: flex;
-      align-items: center;
-      gap: 16px;
-      .userImg {
-        width: 80px;
-        height: 80px;
-        object-fit: cover;
-        border-radius: 100%;
-        border: 1px solid var(--mainColor);
+    .userName {
+      flex: 1;
+      white-space: nowrap;
+      .name {
+        font-weight: bold;
       }
-      .userName {
-        flex: 1;
-        .name {
-          font-weight: bold;
-        }
-        .phone {
-          color: var(--grayColor);
-        }
-      }
-      .control {
-        img {
-          width: 32px;
-          height: 32px;
-        }
-      }
-    }
-    @media (max-width: 760px) {
-      .container {
-        padding: 0px !important;
-      }
-      .userInfo {
-        padding: 20px 10px;
-        img {
-          width: 80px;
-          height: 80px;
-        }
-        span {
-          margin: 0px 10px;
-        }
+      .phone {
+        color: var(--grayColor);
       }
     }
   }
+
   .profileNavCol {
     background-color: var(--whiteColor);
     border-radius: 16px;
@@ -2128,9 +2190,9 @@ footer {
       border-radius: 12px;
       border: 1px solid #eee;
       text-transform: capitalize;
-      img{
+      img {
         width: 20px;
-        height: 20px; 
+        height: 20px;
         object-fit: contain;
         transition: var(--transition);
       }
@@ -2138,7 +2200,7 @@ footer {
       &:hover {
         background-color: var(--mainColor);
         color: var(--whiteColor);
-        img{
+        img {
           filter: brightness(0) invert(1);
         }
       }
@@ -2182,6 +2244,18 @@ footer {
             font-size: 13px;
           }
         }
+      }
+    }
+    .topImg{
+      display: flex;
+      flex-direction: column;
+      gap: 16px;
+      text-align: center;
+      margin-bottom: 32px;
+      img{
+        width: 100%;
+        object-fit: contain;
+        max-height: 200px;
       }
     }
   }
